<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signInsignUp.SignUpFragment"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blankBackground"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="48dp"
            android:layout_marginTop="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorWhite"
                    android:padding="18dp"
                    android:layout_marginHorizontal="24dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/darkGrey"
                        android:layout_marginTop="24dp"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/signUpNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:textColor="@color/darkGrey"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="15sp"
                        android:drawableEnd="@drawable/ic_username"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/darkGrey"
                        android:layout_marginTop="24dp"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/signUpEmailText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:textColor="@color/darkGrey"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="15sp"
                        android:drawableEnd="@drawable/ic_email"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_no"
                        android:textColor="@color/darkGrey"
                        android:layout_marginTop="24dp"
                        android:textSize="13sp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <Spinner
                            android:id="@+id/signUpPhoneSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textColor="@color/darkGrey"
                            />
                        <EditText
                            android:id="@+id/signUpPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contact_no_hint"
                            android:textColor="@color/darkGrey"
                            android:textColorHint="@color/lightGrey"
                            android:textSize="15sp"
                            android:layout_marginStart="8dp"
                            android:inputType="phone"
                            android:maxLength="12"
                            android:drawableEnd="@drawable/ic_phone"
                            />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/darkGrey"
                        android:layout_marginTop="24dp"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/signUpPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:textColor="@color/darkGrey"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        android:inputType="textPassword"
                        android:drawableEnd="@drawable/ic_password"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="24dp"
                        >
                        <CheckBox
                            android:id="@+id/iAgreeCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_agree"
                            android:textColor="@color/lightGrey"
                            android:textSize="12sp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_conditions"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginStart="8dp"
                            android:textSize="12sp"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="32dp"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alreadY_account"
                            android:textColor="@color/lightGrey"
                            android:textSize="13sp"
                            />
                        <TextView
                            android:id="@+id/signInText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in"
                            android:textColor="@color/colorPrimary"
                            android:padding="12dp"
                            android:textSize="14sp"
                            />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/bottom_drawable"
                    android:scaleType="centerCrop"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:paddingVertical="24dp"
            android:layout_marginTop="12dp"
            />

    </LinearLayout>
</ScrollView>