<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signInsignUp.SignInFragment"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blankBackground"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="48dp"
            android:layout_marginTop="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorWhite"
                    android:padding="18dp"
                    android:layout_marginHorizontal="24dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/darkGrey"
                        android:layout_marginTop="24dp"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/signInEmailText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:textColor="@color/darkGrey"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        android:drawableEnd="@drawable/ic_username"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/darkGrey"
                        android:layout_marginTop="24dp"
                        android:textSize="13sp"
                        />
                    <EditText
                        android:id="@+id/signInPasswordText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:textColor="@color/darkGrey"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="15sp"
                        android:layout_marginTop="8dp"
                        android:inputType="textPassword"
                        android:drawableEnd="@drawable/ic_password"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_pass"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="end"
                        android:textSize="13sp"
                        android:padding="12dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_with"
                        android:textColor="@color/darkGrey"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:layout_marginTop="32dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >

                        <ImageView
                            android:id="@+id/googleSignInImage"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            app:srcCompat="@drawable/google"
                            android:padding="12dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/or"
                            android:textSize="13sp"
                            android:padding="12dp"
                            android:textColor="@color/darkGrey"
                            />
                        <ImageView
                            android:id="@+id/facebookSignInImage"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            app:srcCompat="@drawable/facebook"
                            android:padding="12dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_account"
                            android:textColor="@color/darkGrey"
                            android:textSize="12sp"
                            />
                        <TextView
                            android:id="@+id/registerNowText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register_now"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            android:padding="12dp"
                            />
                    </LinearLayout>

                </LinearLayout>

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:srcCompat="@drawable/bottom_drawable"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    />-->
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:paddingVertical="24dp"
            android:layout_marginTop="12dp"
            />

    </LinearLayout>
</ScrollView>